selfhost/test/typechecker/invocation/error_variadic_labeled_generic_type_mismatch.out
Error at %FILE_NAME%:6:15
Type mismatch
  |  foo(a: 1, b: ["a"])
                   ^
Expected: Int
but instead found: String
